force-app/main/default/objects/LLC_BI__Adverse_Action__c/LLC_BI__Adverse_Action__c.object-meta.xml
<CustomObject>
    <description>The Adverse Action Object stores information regarding the reasons for declined loans.</description>
    <label>Adverse Action</label>
    <nameField>
        <displayFormat>AA-{0000000000}</displayFormat>
        <label>Adverse Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adverse Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>