force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/cm_AA_Type__c.field-meta.xml
<CustomField>
    <fullName>cm_AA_Type__c</fullName>
    <description>Counter Offer or Declination?</description>
    <label>AA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Counter Offer</fullName>
            </value>
            <value>
                <fullName>Adverse Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>