force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/cm_Counter_Offer_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>cm_Counter_Offer_Due_Date__c</fullName>
    <label>Counter Offer Due Date</label>
    <type>Date</type>
</CustomField>