force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/cm_Counter_Offer_Status__c.field-meta.xml
<CustomField>
    <fullName>cm_Counter_Offer_Status__c</fullName>
    <label>Counter Offer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Counter Offer Ready to Discuss with Client</fullName>
            </value>
            <value>
                <fullName>Counter Offer Pending Customer</fullName>
            </value>
            <value>
                <fullName>Counter Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Counter Offer Rejected - Submit for Declination</fullName>
            </value>
            <value>
                <fullName>Counter Offer Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>