force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/cm_Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>cm_Loan_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan Officer from Loan</description>
    <label>Loan Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Adverse_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>