force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/LLC_BI__Approved_by_Credit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Approved_by_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A Checkbox that indicates this loan was approved by credit prior to declination.</description>
    <label>Approved by Credit</label>
    <type>Checkbox</type>
</CustomField>