force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/LLC_BI__Decline_Reason_3__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Decline_Reason_3__c</fullName>
    <description>A Picklist of options to select an additional (third) reason the loan was declined</description>
    <label>Decline Reason 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient number of credit references provided</fullName>
            </value>
            <value>
                <fullName>Unacceptable type of credit references provided</fullName>
            </value>
            <value>
                <fullName>Unable to verify credit references</fullName>
            </value>
            <value>
                <fullName>Income insufficient for amount of credit requested</fullName>
            </value>
            <value>
                <fullName>Excessive obligations in relation to income</fullName>
            </value>
            <value>
                <fullName>Unable to verify income</fullName>
            </value>
            <value>
                <fullName>Temporary or irregular employment</fullName>
            </value>
            <value>
                <fullName>Unable to verify employment</fullName>
            </value>
            <value>
                <fullName>Length of employment</fullName>
            </value>
            <value>
                <fullName>Length of residence</fullName>
            </value>
            <value>
                <fullName>Temporary residence</fullName>
            </value>
            <value>
                <fullName>Unable to verify residence</fullName>
            </value>
            <value>
                <fullName>No credit file</fullName>
            </value>
            <value>
                <fullName>Limited credit experience</fullName>
            </value>
            <value>
                <fullName>Poor credit performance with us</fullName>
            </value>
            <value>
                <fullName>Delinquent past or present credit obligations with others</fullName>
            </value>
            <value>
                <fullName>Collection action or judgement</fullName>
            </value>
            <value>
                <fullName>Garnishment or attachment</fullName>
            </value>
            <value>
                <fullName>Foreclosure or repossession</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Value or type of collateral not sufficient</fullName>
            </value>
            <value>
                <fullName>Lack of established earnings record</fullName>
            </value>
            <value>
                <fullName>Slow or past due in trade or loan payments</fullName>
            </value>
            <value>
                <fullName>Number of recent inquiries on credit bureau report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>