force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <description>Master- Detail associating the Adverse Action with the appropriate loan.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Adverse Actions</relationshipLabel>
    <relationshipName>Adverse_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>