force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/LLC_BI__Loan_Flag__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Flag__c</fullName>
    <description>When set, this triggers apex that updates the stage of the loan.
flag: 1 = update</description>
    <label>Loan Flag</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>