force-app/main/default/objects/LLC_BI__Adverse_Action__c/fields/LLC_BI__Withdraw_Reason__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Withdraw_Reason__c</fullName>
    <description>This field is to specify a reason why the loan is being withdrawn.</description>
    <label>Withdraw Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower changed their mind</fullName>
            </value>
            <value>
                <fullName>Application Approved but Not Accepted</fullName>
            </value>
            <value>
                <fullName>Application Withdrawn</fullName>
            </value>
            <value>
                <fullName>Incomplete Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>